--- a/Exercise/exercise.tex
+++ b/Exercise/exercise.tex
@@ -51,7 +51,7 @@ PhD student who presented or me for help in running things.
 
 \subsection*{Python Users}
 
-For those wishing to use Python rather than R, if you are doing this live in the session it fmight be easier to use the system Python (just to avoid setup times for anaconda. However in general we would recommend using an anaconda installation. 
+For those wishing to use Python rather than R, if you are doing this live in the session it might be easier to use the system Python (just to avoid setup times for anaconda. However in general we would recommend using an anaconda installation. 
 
 \end{document}
 
